@@ -115,10 +115,13 @@ public:
     ~QmSystemState();
 
     /*!
-     * @brief Requests to system to move into state @c nextState.
+     * @brief Requests the system to move into state @c nextState.
+     * @description The system state change may not actually change when the function returns;
+     *              use the systemStateChanged(MeeGo::QmSystemState::StateIndication) signal
+     *              to track the system state changes.
      * @credential dsme::DeviceStateControl Resource token required to set the device state (shutdown/reboot/powerup).
      * @param nextState New state
-     * @return True on success, false otherwise
+     * @return True if a valid state was requested, false otherwise
      */
     bool set(NextState nextState);
 
