@@ -6,8 +6,9 @@ qmsystem2 (1.3.2) unstable; urgency=low
   * QmUSBMode::mountStatus does not return correct info (Fixes: NB#273012)
   * Make the usbmode-test more robust
   * Make the manual-usbmode-test more robust
+  * Clarified documentation for QmSystemState::set()
 
- -- Matias Muhonen <ext-matias.muhonen@nokia.com>  Tue, 19 Jul 2011 12:13:00 +0300
+ -- Matias Muhonen <ext-matias.muhonen@nokia.com>  Mon, 25 Jul 2011 13:15:14 +0300
 
 qmsystem2 (1.3.1) unstable; urgency=low
 
